[tool.poetry]
name = "profanity-filter"
version = "1.3.0"
description = "A Python library for detecting and filtering profanity"
authors = ["Roman Inflianskas <infroma@gmail.com>"]
maintainers = ["Roman Inflianskas <infroma@gmail.com>"]
license = "GPL-3.0+"
readme = "README.md"
repository = "https://github.com/rominf/profanity-filter"
keywords = ["library", "profanity", "filter", "censor"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Natural Language :: Russian",
    "Topic :: Text Processing :: Filters",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.6"
spacy = "^2.0"
ordered-set = "^3.0"
cached-property = "^1.5"
ordered-set-stubs = "^0.1.3"
dataclasses = {version = "^0.6.0",python = "~3.6"}
poetry-version = "^0.1.3"
more-itertools = "^8.0"
redis = "^3.2"
pydantic = "^1.3"
"ruamel.yaml" = "^0.15.89"
hunspell = {version = "^0.5.5", optional = true }
hunspell-serializable = {git = "https://github.com/rominf/hunspell_serializable.git", rev = "49c00fabf94cacf9e6a23a0cd666aac10cb1d491", optional = true }
pyffs = {git = "https://github.com/rominf/pyffs", rev = "6c805fbfd7771727138b169b32484b53c0b0fad1", optional = true }
python-Levenshtein = {version = "^0.12.0", optional = true }
regex = {version = "^2019.12.20", optional = true }
polyglot = {version = "^16.7", optional = true }
pycld2 = {version = "=0.31", optional = true }
PyICU = {version = "^2.4", optional = true }
pymorphy2 = {git = "https://github.com/kmike/pymorphy2", rev = "ca1c13f6998ae2d835bdd5033c17197dcba84cf4", optional = true }
pymorphy2-dicts-ru = {version = "^2.4.404381", optional = true }
pymorphy2-dicts-uk = {version = "^2.4.1", optional = true }
appdirs = {version = "^1.4.3", optional = true }
fastapi = {version = "^0.45.0", optional = true }
uvicorn = {version = "^0.11.1", optional = true }

[tool.poetry.extras]
deep-analysis = ["hunspell", "hunspell-serializable", "pyffs", "python-Levenshtein", "regex"]
multilingual = ["polyglot", "pycld2", "PyICU"]
pymorphy2-ru = ["pymorphy2", "pymorphy2-dicts-ru"]
pymorphy2-uk = ["pymorphy2", "pymorphy2-dicts-uk"]
web = ["appdirs", "fastapi", "uvicorn"]

[tool.poetry.dev-dependencies]
pytest = "^3.8"
dill = "^0.2.9"
